# sake-concierge-hackathon-2026

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  azure.yaml
backend/: .env.example  pyproject.toml
backend/scripts/: setup_agent.py
backend/src/api/: a2a.py  main.py  research_tools.py  retriever.py  store_catalog.py  store_data.py
backend/src/data/stores/fukunotomo/: catalog_master.csv  sku_simplified.csv
backend/tests/api/: test_main.py  test_research_tools.py  test_retriever.py  test_store_data.py
backend/tests/fixtures/stores/fukunotomo/: brewery.md  catalog.md
backend/tests/scripts/: test_run_ai_evaluation.py  test_setup_agent.py
docs/: architecture.md  privacy-and-security.md  publication-scope.md
evals/: README.md
evals/golden/: public_demo_golden.jsonl
evals/scripts/: check_chat_results.py  run_ai_evaluation.py  run_chat_batch.py
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ChatComposer.tsx  ChatMessage.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: chatApi.ts  recommendations.ts
frontend/src/types/: chat.ts
frontend/tests/e2e/: chat.spec.ts
frontend/tests/unit/: App.test.tsx  ChatMessage.test.tsx  chatApi.test.ts  recommendations.test.ts
infra/: foundry-model-deployment.bicep  main.bicep  main.parameters.json
infra/core/: host.bicep
